content/v1.4.5/en/api/core-extra/EnumHelper.md
---
title: "EnumHelper"
description: "Auto-generated class reference for EnumHelper."
---
# EnumHelper

**Namespace:** TaleWorlds.Library
**Module:** TaleWorlds.Library
**Type:** `internal static class EnumHelper<T1>`
**Base:** none
**File:** `bin/TaleWorlds.Library/TaleWorlds.Library/EnumHelper.cs`

## Overview

`EnumHelper` is a helper class that usually provides static logic which does not depend on instance state.

## Mental Model

Treat `EnumHelper` as a Helper-style extension point: first identify who creates it, who owns it, and who calls it, then decide whether you should subclass it, compose it, or only read from it.

## Key Methods

### Overlaps
`public static bool Overlaps(sbyte p1, sbyte p2)`

**Purpose:** **Purpose:** Executes the Overlaps logic.

```csharp
// Static call; no instance required
EnumHelper.Overlaps(0, 0);
```

### Overlaps
`public static bool Overlaps(byte p1, byte p2)`

**Purpose:** **Purpose:** Executes the Overlaps logic.

```csharp
// Static call; no instance required
EnumHelper.Overlaps(0, 0);
```

### Overlaps
`public static bool Overlaps(short p1, short p2)`

**Purpose:** **Purpose:** Executes the Overlaps logic.

```csharp
// Static call; no instance required
EnumHelper.Overlaps(0, 0);
```

### Overlaps
`public static bool Overlaps(ushort p1, ushort p2)`

**Purpose:** **Purpose:** Executes the Overlaps logic.

```csharp
// Static call; no instance required
EnumHelper.Overlaps(0, 0);
```

### Overlaps
`public static bool Overlaps(int p1, int p2)`

**Purpose:** **Purpose:** Executes the Overlaps logic.

```csharp
// Static call; no instance required
EnumHelper.Overlaps(0, 0);
```

### Overlaps
`public static bool Overlaps(uint p1, uint p2)`

**Purpose:** **Purpose:** Executes the Overlaps logic.

```csharp
// Static call; no instance required
EnumHelper.Overlaps(0, 0);
```

### Overlaps
`public static bool Overlaps(long p1, long p2)`

**Purpose:** **Purpose:** Executes the Overlaps logic.

```csharp
// Static call; no instance required
EnumHelper.Overlaps(0, 0);
```

### Overlaps
`public static bool Overlaps(ulong p1, ulong p2)`

**Purpose:** **Purpose:** Executes the Overlaps logic.

```csharp
// Static call; no instance required
EnumHelper.Overlaps(0, 0);
```

### ContainsAll
`public static bool ContainsAll(sbyte p1, sbyte p2)`

**Purpose:** **Purpose:** Indicates whether the this instance contains all.

```csharp
// Static call; no instance required
EnumHelper.ContainsAll(0, 0);
```

### ContainsAll
`public static bool ContainsAll(byte p1, byte p2)`

**Purpose:** **Purpose:** Indicates whether the this instance contains all.

```csharp
// Static call; no instance required
EnumHelper.ContainsAll(0, 0);
```

### ContainsAll
`public static bool ContainsAll(short p1, short p2)`

**Purpose:** **Purpose:** Indicates whether the this instance contains all.

```csharp
// Static call; no instance required
EnumHelper.ContainsAll(0, 0);
```

### ContainsAll
`public static bool ContainsAll(ushort p1, ushort p2)`

**Purpose:** **Purpose:** Indicates whether the this instance contains all.

```csharp
// Static call; no instance required
EnumHelper.ContainsAll(0, 0);
```

### ContainsAll
`public static bool ContainsAll(int p1, int p2)`

**Purpose:** **Purpose:** Indicates whether the this instance contains all.

```csharp
// Static call; no instance required
EnumHelper.ContainsAll(0, 0);
```

### ContainsAll
`public static bool ContainsAll(uint p1, uint p2)`

**Purpose:** **Purpose:** Indicates whether the this instance contains all.

```csharp
// Static call; no instance required
EnumHelper.ContainsAll(0, 0);
```

### ContainsAll
`public static bool ContainsAll(long p1, long p2)`

**Purpose:** **Purpose:** Indicates whether the this instance contains all.

```csharp
// Static call; no instance required
EnumHelper.ContainsAll(0, 0);
```

### ContainsAll
`public static bool ContainsAll(ulong p1, ulong p2)`

**Purpose:** **Purpose:** Indicates whether the this instance contains all.

```csharp
// Static call; no instance required
EnumHelper.ContainsAll(0, 0);
```

### initProc
`public static bool initProc(T1 p1, T1 p2)`

**Purpose:** **Purpose:** Executes the initProc logic.

```csharp
// Static call; no instance required
EnumHelper.initProc(p1, p2);
```

### initAllProc
`public static bool initAllProc(T1 p1, T1 p2)`

**Purpose:** **Purpose:** Executes the initAllProc logic.

```csharp
// Static call; no instance required
EnumHelper.initAllProc(p1, p2);
```

## Usage Example

```csharp
EnumHelper.Initialize();
```

## See Also

- [Area Index](../)